add shadows to home banner

--- a/src/scss/components/_HomeBanner.scss
+++ b/src/scss/components/_HomeBanner.scss
@@ -20,9 +20,11 @@
       padding: 10px;
       span:nth-child(1) {
         color: #0ac2ff;
+        text-shadow: 3px 3px 3px #00000096;
       }
       span:nth-child(2) {
         color: #333333;
+        text-shadow: 2px 2px 3px #00000087;
       }
     }
     h2 {
@@ -32,9 +34,11 @@
       padding: 10px;
       span:nth-child(1) {
         color: #333333;
+        text-shadow: 2px 2px 3px #00000087;
       }
       span:nth-child(2) {
         color: #0ac2ff;
+        text-shadow: 3px 3px 3px #00000096;
       }
     }
     h3 {
