produts home page ok

--- a/src/scss/components/_LogoMenu.scss
+++ b/src/scss/components/_LogoMenu.scss
@@ -12,13 +12,13 @@
       padding: 10px;
       a {
         text-decoration: none;
-        color: #333;
+        color: $gray-like;
         transition: 0.3s;
         &:visited {
-          color: #333;
+          color: $gray-like;
         }
         &:hover {
-          color: #0ac2ff;
+          color: $light-blue;
         }
       }
     }
