--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import "./sets";
 @import "./mq";
 @import "./components/LogoMenu";
-@import "./components/HomeBanner";
+@import "./components/home/HomeBanner";
+@import "./components/home/HomeProducts";
