--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,3 +3,4 @@
 @import "./components/LogoMenu";
 @import "./components/home/HomeBanner";
 @import "./components/home/HomeProducts";
+@import "./components/home/HomeWhyUs";
