--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,4 @@
 @import "./components/home/HomeBanner";
 @import "./components/home/HomeProducts";
 @import "./components/home/HomeWhyUs";
+@import "./components/Footer";
