product page ok

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,3 +5,6 @@
 @import "./components/home/HomeProducts";
 @import "./components/home/HomeWhyUs";
 @import "./components/Footer";
+@import "./components/ProductCard";
+@import "./components/AllProductContainers";
+@import "./ProductPage";
