--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "./sets";
 @import "./mq";
+@import "./components/TopBar";
 @import "./components/LogoMenu";
 @import "./components/home/HomeBanner";
 @import "./components/home/HomeProducts";
