change font-size from px to rem

--- a/src/scss/components/_ProductCard.scss
+++ b/src/scss/components/_ProductCard.scss
@@ -8,12 +8,12 @@
   }
   &__name {
     font-weight: 100;
-    font-size: 20px;
+    font-size: 2rem;
     margin-bottom: 20px;
   }
   &__price {
     font-weight: bold;
     color: $light-blue;
-    font-size: 18px;
+    font-size: 1.8rem;
   }
 }
