--- a/src/scss/_ProductPage.scss
+++ b/src/scss/_ProductPage.scss
@@ -2,7 +2,7 @@
   padding: 20px;
   &__title {
     text-align: center;
-    font-size: 30px;
+    font-size: 3rem;
     text-transform: uppercase;
     color: $gray-like;
     span {
@@ -13,7 +13,7 @@
     text-align: center;
     max-width: 800px;
     margin: 20px auto;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 150%;
     letter-spacing: 1px;
   }
