--- a/src/scss/components/_Footer.scss
+++ b/src/scss/components/_Footer.scss
@@ -19,9 +19,10 @@
     p {
       margin: 5px 0px;
       text-align: left;
+      font-size: 2rem;
       span {
         font-weight: bolder;
-        font-size: 20px;
+        font-size: 2rem;
         margin-right: 10px;
         vertical-align: text-top;
       }
@@ -32,6 +33,7 @@
       font-weight: bolder;
       letter-spacing: 1px;
       margin-bottom: 10px;
+      font-size: 2rem;
     }
     ul {
       list-style: none;
@@ -41,6 +43,7 @@
           text-decoration: none;
           color: white;
           font-weight: 100;
+          font-size: 1.5rem;
         }
       }
     }
@@ -53,10 +56,12 @@
       margin: 20px 0px;
       font-weight: 600;
       line-height: 130%;
+      font-size: 1.5rem;
     }
     &__info {
       p {
         margin: 8px 0px;
+        font-size: 1.5rem;
       }
     }
   }
