--- a/src/scss/components/_LogoMenu.scss
+++ b/src/scss/components/_LogoMenu.scss
@@ -14,6 +14,7 @@
         text-decoration: none;
         color: $gray-like;
         transition: 0.3s;
+        font-size: 1.8rem;
         &:visited {
           color: $gray-like;
         }
