--- a/src/scss/components/home/_HomeProducts.scss
+++ b/src/scss/components/home/_HomeProducts.scss
@@ -23,7 +23,7 @@
       justify-content: center;
       align-items: center;
       h2 {
-        font-size: 25px;
+        font-size: 2.5rem;
         text-transform: uppercase;
         padding: 20px 0px;
         color: $light-blue;
