--- a/src/scss/components/_AllProductContainers.scss
+++ b/src/scss/components/_AllProductContainers.scss
@@ -3,7 +3,7 @@
   text-transform: uppercase;
   color: $gray-like;
   margin-top: 40px;
-  font-size: 30px;
+  font-size: 3rem;
 }
 
 .all-product-container {
