--- a/src/scss/_Legality.scss
+++ b/src/scss/_Legality.scss
@@ -4,17 +4,26 @@
   img {
     display: block;
     margin: 3rem auto;
+    @include mq(small) {
+      max-width: 300px;
+    }
   }
   h1 {
     text-align: center;
     color: $light-blue;
     font-size: 3rem;
+    @include mq(small) {
+      font-size: 2rem;
+    }
   }
   &__par {
     font-size: 2rem;
     letter-spacing: 2px;
     line-height: 180%;
     margin-bottom: 2.5rem;
+    @include mq(small) {
+      font-size: 1.7rem;
+    }
     span {
       color: $light-blue;
       font-weight: bolder;
