--- a/src/scss/components/_Footer.scss
+++ b/src/scss/components/_Footer.scss
@@ -5,6 +5,9 @@
   color: rgba(255, 255, 255, 0.8);
   @include flex;
   align-items: flex-start;
+  @include mq(small) {
+    flex-wrap: wrap;
+  }
   .footer-contact,
   .useful,
   .company {
@@ -12,6 +15,12 @@
     flex-basis: 20%;
     @include flex;
     flex-direction: column;
+    @include mq(medium) {
+      flex-basis: 30%;
+    }
+    @include mq(small) {
+      flex-basis: 40%;
+    }
   }
   .footer-contact,
   .useful {
@@ -44,6 +53,9 @@
           color: white;
           font-weight: 100;
           font-size: 1.5rem;
+          @include mq(medium) {
+            font-size: 1.7rem;
+          }
         }
       }
     }
