--- a/src/scss/components/home/_HomeWhyUs.scss
+++ b/src/scss/components/home/_HomeWhyUs.scss
@@ -2,7 +2,10 @@
   &__title {
     text-align: center;
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 4rem;
+    @include mq(small) {
+      font-size: 3rem;
+    }
     span {
       color: $light-blue;
     }
@@ -18,11 +21,15 @@
   }
   &__properties {
     @include flex;
+    @include mq(small) {
+      flex-direction: column;
+    }
     margin-top: 30px;
     .first-block,
     .third-block {
       @include flex;
       flex-direction: column;
+
       h2 {
         max-width: 300px;
       }
@@ -30,6 +37,7 @@
       div {
         @include flex;
         margin-bottom: 15px;
+
         section {
           display: flex;
           flex-direction: column;
