--- a/src/scss/components/home/_HomeBanner.scss
+++ b/src/scss/components/home/_HomeBanner.scss
@@ -1,6 +1,9 @@
 .banner {
   height: 700px;
   position: relative;
+  @include mq(galaxys5land) {
+    height: 400px;
+  }
   &__image-wrapper {
     height: 100%;
     background: url("../images/home_christmas.jpg");
@@ -13,11 +16,17 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    @include mq(galaxys5land) {
+      top: 50%;
+    }
     h1 {
       text-transform: uppercase;
-      font-size: 50px;
+      font-size: 5rem;
       margin: 0;
       padding: 10px;
+      @include mq(galaxys5land) {
+        font-size: 3rem;
+      }
       span:nth-child(1) {
         color: $light-blue;
         text-shadow: 3px 3px 3px #00000096;
@@ -29,9 +38,12 @@
     }
     h2 {
       text-transform: uppercase;
-      font-size: 60px;
+      font-size: 6rem;
       margin: 0;
       padding: 10px;
+      @include mq(galaxys5land) {
+        font-size: 3.5rem;
+      }
       span:nth-child(1) {
         color: $gray-like;
         text-shadow: 2px 2px 3px #00000087;
@@ -45,7 +57,10 @@
       color: $gray-like;
       margin: 0;
       padding: 10px;
-      font-size: 20px;
+      font-size: 2rem;
+      @include mq(galaxys5land) {
+        font-size: 1.5rem;
+      }
     }
   }
 }
