--- a/src/scss/components/home/_HomeProducts.scss
+++ b/src/scss/components/home/_HomeProducts.scss
@@ -4,7 +4,9 @@
     text-transform: uppercase;
     text-align: center;
     margin: 30px auto;
-
+    @include mq(galaxys5land) {
+      font-size: 2rem;
+    }
     span:nth-child(1) {
       color: $gray-like;
     }
@@ -18,6 +20,11 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    @include mq(galaxys5land) {
+      flex-direction: column;
+      gap: 40px;
+      margin: 20px auto;
+    }
     .card {
       display: flex;
       flex-direction: column;
