--- a/src/scss/components/_Footer.scss
+++ b/src/scss/components/_Footer.scss
@@ -8,6 +8,10 @@
   @include mq(small) {
     flex-wrap: wrap;
   }
+  @include mq(xsmall) {
+    flex-direction: column;
+    align-items: center;
+  }
   .footer-contact,
   .useful,
   .company {
