--- a/src/scss/_Legality.scss
+++ b/src/scss/_Legality.scss
@@ -36,6 +36,9 @@
       gap: 20px;
       border: 1px solid #ddd;
       padding: 20px;
+      @include mq(xsmall) {
+        flex-direction: column;
+      }
       span {
         color: $gray-like;
       }
@@ -44,6 +47,15 @@
         display: block;
         text-align: center;
         @include flex;
+        @include mq(xsmall) {
+          min-height: 130px;
+          font-size: 12rem;
+        }
+      }
+      .text {
+        @include mq(xsmall) {
+          word-break: break-word;
+        }
       }
     }
   }
