--- a/src/scss/components/_LogoMenu.scss
+++ b/src/scss/components/_LogoMenu.scss
@@ -17,6 +17,9 @@
     z-index: 3;
     width: 200px;
   }
+  @include mq(xsmall) {
+    top: 60px;
+  }
   .logo {
     @include mq(small) {
       display: none;
@@ -83,5 +86,8 @@
     top: 60px;
     left: 15px;
     z-index: 2;
+  }
+  @include mq(xsmall) {
+    top: 80px;
   }
 }
