--- a/src/scss/components/home/_HomeWhyUs.scss
+++ b/src/scss/components/home/_HomeWhyUs.scss
@@ -6,6 +6,10 @@
     @include mq(small) {
       font-size: 3rem;
     }
+    @include mq(xsmall) {
+      font-size: 2rem;
+      margin-top: 20px;
+    }
     span {
       color: $light-blue;
     }
@@ -18,6 +22,10 @@
     text-align: center;
     width: 700px;
     margin: 10px auto;
+    @include mq(xsmall) {
+      width: 100%;
+      padding: 10px;
+    }
   }
   &__properties {
     @include flex;
